<resources>
    <string name="app_name">SYM - Labo2</string>
    <string name="main_asyncButton">Etape 3.1</string>
    <string name="main_differButton">Etape 3.2</string>
    <string name="main_objectButton">Etape 3.3</string>
    <string name="main_graphqlButton">Etape 3.4</string>
    <string name="main_compressButton">Etape 3.5</string>

    <string name="async_send_title">Envoi</string>
    <string name="async_send_content"></string>
    <string name="async_send_button">Envoyer</string>
    <string name="async_reception_title">Reception</string>
    <string name="async_reception_content"></string>

    <string name="object_send_title">Envoi</string>
    <string name="object_send_content"></string>
    <string name="object_send_button">Envoyer</string>
    <string name="object_reception_title">Reception</string>
    <string name="object_reception_content"></string>

    <string name="graphql_author_choice_text">Choix de l\'auteur</string>

</resources>