<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <Button
        android:id="@+id/main_asyncButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_asyncButton"
        android:onClick="goAsyncActivity"
         />

    <Button
        android:id="@+id/main_differButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_differButton"
        android:layout_below="@id/main_asyncButton"
        />

    <Button
        android:id="@+id/main_objectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_objectButton"
        android:onClick="goObjectActivity"
        android:layout_below="@id/main_differButton"
        />

    <Button
        android:id="@+id/main_graphqlButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_graphqlButton"
        android:layout_below="@id/main_objectButton"
         />

    <Button
        android:id="@+id/main_compressButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_compressButton"
        android:layout_below="@id/main_graphqlButton"
        />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>