<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AsyncActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    >

        <TextView
            android:id="@+id/async_sendTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/async_send_title"
        />

        <EditText
            android:id="@+id/async_sendContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/async_sendTitle"
            android:hint="@string/async_send_content"
        />

        <Button
            android:id="@+id/async_sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/async_send_button"
            android:layout_below="@id/async_sendContent"
            android:onClick="sendAsyncMessage"

        />
        
        <TextView
            android:id="@+id/async_receptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/async_sendButton"
            android:text="@string/async_reception_title"
        />

        <EditText
            android:id="@+id/async_receptionContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/async_receptionTitle"
            android:hint="@string/async_reception_content"
        />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>