<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".differ.DifferActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/differ_sendTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/async_send_title"
            />

        <EditText
            android:id="@+id/differ_sendContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/differ_sendTitle"
            android:hint="@string/async_send_content"
            />

        <Button
            android:id="@+id/differ_sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/async_send_button"
            android:layout_below="@id/differ_sendContent"

            />




    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>